--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,9 @@ buildSrc/build
 /spring-*/build
 /src/asciidoc/build
 target/
- 
+*.MF
+*.properties
+
 # IDEA artifacts and output dirs
 *.iml
 *.ipr
